Corrected fixed thead overflow

--- a/public_html/layouts/basic/styles/libraries/_Libraries.scss
+++ b/public_html/layouts/basic/styles/libraries/_Libraries.scss
@@ -310,3 +310,7 @@ ul.ui-autocomplete {
 .js-fixed-thead tfoot td {
 	border-top: unset !important; //floatThead added this to table, causing additional border
 }
+
+.floatThead-wrapper {
+	overflow: hidden; //prevent fixed thead from overflowing table
+}
